Fixed spacing of cards

--- a/mediumscreen.css
+++ b/mediumscreen.css
@@ -173,6 +173,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 30px;
+    margin-right: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 30px;
